refactor(columnar-map): PR #18368 review fixes — SPI only
- getMaterializedColumnMetadata replaces getVirtualColumnMetadata
- getValueType replaces getKeyValueType
- isMaterializedMapColumn replaces isMapVirtualColumn; _isMapVirtualColumn
  field removed (derived as parentMapColumn != null)
- IS_MAP_MATERIALIZED_COLUMN replaces IS_MAP_VIRTUAL_COLUMN (on-disk key:
  mapMaterializedColumn)
- FieldConfig.IndexType: add one-line Javadoc to all 11 enum constants
- ColumnarMapIndexConfig: document dense/sparse key selection criteria and
  top-N-by-fill-rate semantics for maxDenseKeys cutoff

Co-Authored-By: Claude Sonnet 4.6 (1M context) <noreply@anthropic.com>